tests/parser/should_compile/T8708.hs
{-# LANGUAGE KindSignatures #-}
module T808 where

import Data.Kind (Type)

foo :: (Int, Int :: Type)
foo = undefined
