tests/parser/should_fail/T25258b.hs
{-# LANGUAGE MagicHash, ExtendedLiterals #-}

module T25258b where

import GHC.Exts

x2 = 0x80#Int3
